# OpenCFLite

./: CFBurstTrie.c  CFPriv.h  CFRuntime.c  CMakeLists.txt  CoreFoundation_Prefix.h
compat/: dirent.c  dirent.h
examples/CFTest/win_cw/: MyMFCHeaders.h
examples/StringExample/: StringExample.vcxproj
include/: ConditionalMacros.h  TargetConditionals.h
objc4/: objc.vcxproj
objc4/objcrt/: objcrt.vcxproj
objc4/runtime/: objc-references.mm  objc-sel.mm
windows/: CFLiteLib.vcxproj
